# spinexus

./: .gitignore  Cargo.toml  README.md  style.css  tailwind.config.js  tailwind.sh
src/: app_config.rs  components.rs  download.rs  main.rs  models.rs  route.rs
