[package]
name = "spinexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
confy = "0.5.1"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-router = "0.4.1"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.188"
